# KOH-GPJax

./: .gitignore  404.html  LICENSE.md  MATLAB_mappings.py  MATLAB_vs_Mici.ipynb  MATLAB_vs_Mici_2.ipynb  README.md  dataloader.py  gpjax-calibration.ipynb  gpjax-calibration.py  index.html  install-command.txt  mappings.py  matlabmodel.py  matlabmodel2.py  matlabmodelnew.py  mici-GRWM-matlabmodel-myriad.py  mici-GRWM-matlabmodel.ipynb  mici-GRWM-matlabmodel2.ipynb  mici-GRWM-matlabmodelnew.ipynb  mici-GRWM-model1.ipynb  mici-HMC-matlabmodel.ipynb  mici-HMC-model1.ipynb  mici-HMC.ipynb  mkdocs.yml  model1.py  objects.inv  param-jit.py  posterior-example.ipynb  posterior-example.py  posterior-mici-GRWM.ipynb  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  question.yml
.github/workflows/: docs.yml  tests.yml
LICENSE/: index.html
_examples/basics/: index.html
api/SUMMARY/: index.html
api/dataset/: index.html
api/gps/: index.html
api/kernels/computations/kohcomputation/: index.html
api/kernels/kohkernel/: index.html
api/kohmodel/: index.html
api/parameters/: index.html
data/: simple_comp.csv  simple_field.csv
data/matlab/: simple_field_medium.csv
data/toy/: field_sin.csv  sim_sin.csv
docs/: index.md  installation.md
docs/_examples/: basics.md
docs/_examples/data/: sim.csv
docs/api/: dataset.md  index.md
docs/scripts/: gen_examples.py  gen_pages.py  notebook_converter.py
examples/: basics.py
installation/: index.html
kohgpjax/: __init__.py  base.py  computation.py  dataset.py  gps.py  kernel.py  kohkernel.py  kohkernelcomputation.py  kohmodel.py  mappings.py  objectives.py  parameters.py  posterior.py
kohgpjax/kernels/: kohkernel.py
kohgpjax/kernels/computations/: kohcomputation.py
search/: search_index.json
tests/: MATLAB_mappings.py  README.md  conftest.py  convergence-fixed-N.py  convergence-fixed-W.py  convergence.py  plot-posterior-matlab.ipynb  test_dataset.py  test_gps.py  test_kohmodel.py  test_parameters.py  test_posterior.py  test_predict.py  timings-GRWM-matlabmodel_sin.py  truefuncs.py  valid-GRWM-matlabmodel.ipynb  valid-GRWM-toymodel_sin.ipynb  valid-HMC-matlabmodel.ipynb  valid-HMC-toymodel.ipynb  valid-HMC-toymodel_const.ipynb  valid-HMC-toymodel_growing.ipynb  valid-HMC-toymodel_sin.ipynb  valid-HMC-toymodelsin_growing_sin.ipynb  valid-HMC-toymodelsin_growingsin.ipynb  valid-HMC-toymodelsin_sin.ipynb
tests/convergence/: plot-convergence.py
tests/data/: dataloader.py
tests/data/toy/: field.csv  field_const.csv  field_growing.csv  field_growing_sin.csv  field_growingsin.csv  sim_const.csv  sim_growing.csv  sim_growing_sin.csv  sim_growingsin.csv
tests/integration/: test_integration_posterior_density.py
tests/kernels/: test_kohcomputation.py  test_kohkernel.py
tests/models/: matlabmodel_sin.py  toymodel.py  toymodel_growing_sin.py  toymodel_growingsin.py  toymodel_sin.py
