[build-system]
requires = [ # Build requirements
    "setuptools",
]

[project]
name = "kohgpjax"  # Name of your package
version = "0.3.1"  # Version of your package
description = "Kennedy & O'Hagan Bayesian calibration framework written in JAX and GPJax"  # Description of your package
authors = [ # List of authors
    {name="James Briant", email="james.briant.21@ucl.ac.uk"}
]
dependencies = [ # Package requirements
    "beartype",
    "cola-ml",
    "distrax",
    "flax",
    "gpjax", 
    "jax<0.6", 
    "jaxtyping", 
]
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]