[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kohgpjax"
dynamic = ["version"]
description = "Kennedy & O'Hagan Bayesian calibration framework written in JAX and GPJax"
readme = "README.md"
requires-python = ">=3.11, <3.13" # Match GPJax range for safety
license = { text = "MIT" }
keywords = ["gaussian-processes", "jax", "machine-learning", "bayesian", "calibration", "kennedy-ohagan"]
authors = [{ name = "James Briant", email = "james.briant.21@ucl.ac.uk" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "beartype",
  "cola-ml",
  "flax",
  "gpjax>0.11.0,<=0.12.0",
  "jax<0.7",
  "jaxtyping",
  "numpyro",
]
optional-dependencies = {docs = [
    "mkdocs",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocstrings-python",
    "mkdocs-jupyter",
    # "mkdocs-git-authors-plugin",
    "pymdown-extensions",
], test = [
    "pytest",
    "pytest-cov",
]}

[project.urls]
Documentation = "https://github.com/jamesbriant/koh-gpjax"
Issues = "https://github.com/jamesbriant/koh-gpjax/issues"
Source = "https://github.com/jamesbriant/koh-gpjax"

[tool.hatch.version]
path = "kohgpjax/__init__.py"

[tool.hatch.envs.default]
installer = "uv"
python = "3.11"

[tool.hatch.envs.docs]
dependencies = [
  "jupytext",
  "ipykernel",
  "ipywidgets",
  "nbconvert",
  "matplotlib",
]
python = "3.11"

[tool.hatch.envs.docs.scripts]
build = ["python docs/scripts/gen_examples.py --execute"]

[tool.hatch.envs.dev]
# Dependencies have been simplified. `ruff` handles formatting, linting, and import sorting.
# `black`, `isort`, and `autoflake` have been removed.
dependencies = [
  "ruff>=0.6",
  "pre-commit>=3.2.2",
  "interrogate>=1.5.0",
  "codespell>=2.2.4",
  "pytest>=7.2.2",
  "pytest-cov>=4.0.0",
  "pytest-pretty>=1.1.1",
  "pytest-xdist>=3.2.1",
  "coverage>=7.2.2",
  "absolufy-imports>=0.3.1",
  "xdoctest>=1.1.1",
  "mktestdocs>=0.2.1",
  "jupytext",
  "pytest-beartype",
]
python = "3.11"

[tool.hatch.envs.dev.scripts]
# Scripts are now consolidated to use ruff for both linting and formatting.
# `ruff format` handles code formatting (replacing black) and jupytext formatting.
# `ruff check --fix` handles linting, import sorting (replacing isort), and removing unused variables (replacing autoflake).
format = ['ruff format ./kohgpjax ./tests ./examples', 'jupytext --pipe "ruff format -" examples/*.py || true']
check = ['ruff check --fix ./kohgpjax ./tests ./examples || true']

# Testing scripts remain the same.
test = "pytest . -v -n 4 --beartype-packages='kohgpjax'"
coverage = "pytest . -v --cov=./kohgpjax --cov-report=xml:./coverage.xml"
docstrings = "xdoctest ./kohgpjax"
all-tests = ['check', 'docstrings', 'test']

# The [tool.black] section is no longer needed and has been removed.

[tool.pytest.ini_options]
filterwarnings = ["error", "ignore::DeprecationWarning"]
testpaths = ["tests"]
xfail_strict = true

# Ruff configuration now includes formatting options and import sorting rules.
[tool.ruff]
fix = true
cache-dir = "~/.cache/ruff"
exclude = ["docs/", "examples/"]
line-length = 88
src = ["kohgpjax", "tests"]
target-version = "py311"

[tool.ruff.format]
# This section configures ruff's formatter. It's designed to be compatible with black.
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
dummy-variable-rgx = "^_$"
# Added "I" to the select list to enable isort-compatible import sorting rules.
select = [
  "F", "E", "W", "I", "YTT", "B", "Q", "PLE", "PLR", "PLW", "PIE", "PYI", "TID", "ISC"
]
ignore = [
  "B008", "E402", "E731", "E501", "S303", "S307", "RET504", "S101", "F722", "PLR2004", "PLR0913"
]
unfixable = ["ERA001", "F401", "F841", "T201", "T203"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"kohgpjax/__init__.py" = ['I', 'F401', 'E402', 'D104']

# The [tool.isort] section is no longer needed as ruff handles import sorting.

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
fail-under = 80
exclude = [
  "setup.py",
  "docs",
  "tests",
  "kohgpjax/__init__.py",
]
verbose = 2
quiet = false
color = true

[tool.coverage.run]
source_pkgs = ["kohgpjax", "tests"]
branch = true
parallel = true
omit = ["kohgpjax/__init__.py"]

[tool.coverage.paths]
kohgpjax = ["kohgpjax", "*/kohgpjax/"]
tests = ["tests", "*/kohgpjax/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
fail_under = 70
precision = 1
show_missing = true
skip_covered = true

[tool.tox]
env_list = [
    "py311",
    "py312",
]
env_run_base = {commands = [
    [
        "pytest",
        "--cov",
        "--cov-report=xml",
    ],
], extras = [
    "test",
]}
env.docs = {commands = [
    [
        "mkdocs",
        "build",
        "--strict",
    ],
], extras = [
    "docs",
]}
gh.python."3.11" = ["py311"]
gh.python."3.12" = ["py312"]
